# llmproxy

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.yaml  docker-compose.yaml
.cargo/: config.toml
docs/: TEST_ISSUES.md  TEST_PLAN.md
docs/PLANS/: gpt5-cleanup-summary.md  opencode-metadata-tolerance.md  round1-gpt5-cleanup.md  round2-gpt5-cleanup.md  round3-gpt5-cleanup.md  round4-gpt5-cleanup.md  round5-gpt5-cleanup.md
plans/: copilot-gpt5-compat.md  copilot-model-discovery-round2.md  copilot-model-discovery-round3.md  copilot-model-discovery.md
scripts/: install-hooks.sh  scan-secrets.sh
scripts/hooks/: pre-commit
src/: anthropic.rs  auth.rs  config.rs  cooldown.rs  error.rs  extractor.rs  lib.rs  main.rs  openai.rs  proxy_client.rs  responses.rs  router.rs  server.rs  state.rs  tokenize.rs  util.rs
src/conversion/: cache_hint.rs  mod.rs  request.rs  response.rs  responses.rs  responses_stream.rs  stream.rs
src/oauth/: device_flow.rs  mod.rs  token_store.rs
src/providers/: anthropic.rs  copilot.rs  mod.rs  openai_compat.rs  openai_responses.rs  openrouter.rs
tests/: auth.rs  integration_router.rs  server.rs
